# advent23

./: Cargo.toml  LICENSE-MIT  README.md  justfile
benches/: aoc-bench.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs  main.rs
