[package]
name = "advent"
version = "0.1.0"
authors = ["Cameron Ward <cameronuward@gmail.com>"]
edition = "2021"
repository = "https://github.com/username/advent"
license = "MIT/Apache-2.0"

[dependencies]
yaah = { version = "0.2.2", default-features = false }
clap = { version = "4.0", features = ["derive"], optional = true }

criterion = { version = "0.4", optional = true }

[features]
default = []
harness = ["clap", "criterion", "yaah/harness"]

[[bin]]
name = "advent"
required-features = ["harness"]

[[bench]]
name = "aoc-bench"
harness = false
required-features = ["harness"]

[patch.crates-io]
yaah = { git = "https://github.com/camuward/yaah" }
